# curv

./: README.md  pyproject.toml  setup.py
curv/: __init__.py  run.py
curv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
curv/core/: fourier_core.py  matrix_core.py  plot.py
curv/tools/: .calculate.py.swp  __init__.py  calc_vectors.py  calculate.py  calculate_p.py  height.py  matrix.py  plot_curvature.py  plot_height.py  write_ndx.py
